# MemShare

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements-devel.txt  requirements.txt
config/: APAN.yml  APAN_large.yml  DyRep.yml  JODIE.yml  JODIE_large.yml  TGAT copy.yml  TGAT.yml  TGN.yml  TGN_2000.yml  TGN_600.yml  TGN_large.yml  TIGE.yml  histTGN.yml  new.yml  pre.yml
csrc/: export.cpp
csrc/_sampler/: cahce_index_update.cpp  export.cpp
csrc/_sampler/include/: head.h  neighbors.h  output.h
csrc/partition/: ldg.cpp  metis.cpp  mtmetis.cpp
csrc/sampler/include/: sampler.h
csrc/uvm/: uvm.cpp
docs/source/: conf.py
docs/source/api/python/: index.rst
examples/: test_all.sh  train_boundery.py
starrygl/: __init__.py
starrygl/core/: stream.py
starrygl/data/: graph.py  utils.py
starrygl/distributed/: __init__.py  cclib.py  context.py  rpc.py  utils.py
starrygl/evaluation/: evaluator.py  get_evalute_data.py  get_tgbl_data.py  utils.py
starrygl/module/: Filter.py  distributed_modules copy.py  distributed_modules.py  disttgl_layers.py  disttgl_modules.py  historical_cache.py  layers.py  memorys.py  modules.py  utils.py
starrygl/parallel/: __init__.py  layerpipe.py  route.py  sparse.py  sync_bn.py  utils.py
starrygl/parallel/timeline/: __init__.py  pipe.py  sync.py  utils.py
starrygl/sample/: batch_data.py  count_comm.py  count_static.py  data_loader.py  stream_manager.py
starrygl/sample/cache/: LRU_cache.py  cache.py  fetch_cache.py  static_cache.py  utils.py
starrygl/sample/graph_core/: __init__.py  utils.py
starrygl/sample/memory/: _shared_mailbox.py  change.py  shared_mailbox.py
starrygl/sample/part_utils/: partition_tgnn.py  transformer_from_speed.py
starrygl/sample/sample_core/: EvaluateNegativeSampling.py  LocalNegSampling.py  PreNegSampling.py  Utils.py  base.py  my_sample_test_before.py  my_sample_test_static.py  neighbor_sampler.py  ogb_demo_before.py  ogb_demo_static.py  random_walk_sampler.py  reddit_demo_before.py  reddit_demo_static.py
starrygl/utils/: __init__.py  get_config.py  partition.py  static_train.py  uvm.py
